# live

./: .gitignore  Cargo.toml
src/: __neuronet.rs  common.rs  main.rs  memory.rs  neuroadd.rs  neuronet.rs  osobi.rs
