[package]
name = "live"
version = "0.1.0"
authors = ["Igor Poloskov <ipoloskov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
#neuronet = { file = "../neuronet", version = ">=0.1.2"}
neuronet = { git = "https://github.com/poloskovi/neuronet", version = ">=0.1.2"}

plotters = "^0.3.1"
piston_window = "^0.112.0"
systemstat = "0.1.7"
plotters-piston = "^0.3.0"
